[gd_scene load_steps=11 format=3 uid="uid://n1eghj4te88a"]

[ext_resource type="Script" path="res://scripts/gun/gun.gd" id="1_8yt1r"]
[ext_resource type="Texture2D" uid="uid://galc2r4gpkdi" path="res://sprites/guns/guns.png" id="1_b0041"]
[ext_resource type="Texture2D" uid="uid://da7xk67axn8fd" path="res://sprites/guns/muzzle flashes.png" id="3_6ukkm"]
[ext_resource type="AudioStream" uid="uid://eywgm3nylp6r" path="res://sounds/shoot_sound.wav" id="3_ilwih"]
[ext_resource type="Texture2D" uid="uid://4782gegcyi5f" path="res://sprites/lights/roundlight.png" id="4_01oks"]

[sub_resource type="Animation" id="Animation_3mqgm"]
length = 0.001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath(".:position")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Vector2(0, 0)]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath(".:rotation")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [0.0]
}
tracks/2/type = "value"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath("BarrelEnd/Sprite2D:visible")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [false]
}

[sub_resource type="Animation" id="Animation_f4sj6"]
resource_name = "equip"
length = 0.3
step = 0.01
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath(".:rotation")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.3),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [1.309, -6.28319]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath(".:position")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0, 0.3),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [Vector2(-2, 5), Vector2(0, 0)]
}

[sub_resource type="Animation" id="Animation_gatvx"]
resource_name = "reload"
length = 0.5
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath(".:rotation")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.5),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [0.0, -12.5664]
}

[sub_resource type="Animation" id="Animation_3qays"]
resource_name = "shoot"
length = 0.1
step = 0.01
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath(".:position")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.04, 0.1),
"transitions": PackedFloat32Array(1, 1, 1),
"update": 0,
"values": [Vector2(0, 0), Vector2(-3, -1), Vector2(0, 0)]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath(".:rotation")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0, 0.04, 0.1),
"transitions": PackedFloat32Array(1, 1, 1),
"update": 0,
"values": [0.0, -0.207107, 0.0]
}
tracks/2/type = "method"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath("../ShootSound")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"values": [{
"args": [0.0],
"method": &"play"
}]
}
tracks/3/type = "value"
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/path = NodePath("BarrelEnd/Sprite2D:visible")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/keys = {
"times": PackedFloat32Array(0, 0.06),
"transitions": PackedFloat32Array(1, 1),
"update": 1,
"values": [true, false]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_xhcu1"]
_data = {
"RESET": SubResource("Animation_3mqgm"),
"equip": SubResource("Animation_f4sj6"),
"reload": SubResource("Animation_gatvx"),
"shoot": SubResource("Animation_3qays")
}

[node name="Gun" type="Node2D"]
script = ExtResource("1_8yt1r")

[node name="Sprite2D" type="Sprite2D" parent="."]
texture = ExtResource("1_b0041")
hframes = 3
vframes = 3

[node name="BarrelEnd" type="Node2D" parent="Sprite2D"]
position = Vector2(5, -2)

[node name="Sprite2D" type="Sprite2D" parent="Sprite2D/BarrelEnd"]
visible = false
position = Vector2(6, 0)
texture = ExtResource("3_6ukkm")

[node name="PointLight2D" type="PointLight2D" parent="Sprite2D/BarrelEnd/Sprite2D"]
color = Color(0.980392, 0.686275, 0.258824, 1)
texture = ExtResource("4_01oks")

[node name="ShellPos" type="Node2D" parent="Sprite2D"]
position = Vector2(-1, -3)

[node name="ShootSound" type="AudioStreamPlayer2D" parent="."]
stream = ExtResource("3_ilwih")

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
root_node = NodePath("../Sprite2D")
libraries = {
"": SubResource("AnimationLibrary_xhcu1")
}

[node name="ShootTimer" type="Timer" parent="."]
wait_time = 0.1

[connection signal="animation_finished" from="AnimationPlayer" to="." method="_on_animation_player_animation_finished"]
[connection signal="timeout" from="ShootTimer" to="." method="_on_shoot_timer_timeout"]
